--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "./assets/styles/variable";
+@import "./assets/styles/helper";
+@import "./assets/styles/sp-grid.scss";
+@import "./assets/styles/global";
