--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -11,7 +11,7 @@
     <main
       class="container__col-12 container__col-sm-12 container__col-md-9 container__col-lg-10"
     >
-      <section class="container__row">
+      <section class="container__row" *ngIf="!isLoading">
         <app-program-card
           *ngFor="let item of rocketDetails; let i = index"
           class="container__col-12 container__col-sm-12 container__col-md-6 container__col-lg-3"
@@ -29,3 +29,4 @@
   </section>
 </main>
 <app-footer class="footer-wrapper"></app-footer>
+<app-common-loader *ngIf="isLoading"></app-common-loader>
