--- a/src/app/modules/shared/common-loader/common-loader.component.scss
+++ b/src/app/modules/shared/common-loader/common-loader.component.scss
@@ -1,3 +1,4 @@
+@import "../../../../assets/styles/helper";
 .over {
   animation: rotator 1.5s ease-in-out infinite;
   stroke-dasharray: 107, 38;
@@ -22,5 +23,5 @@
   top: 50%;
   left: 50%;
   line-height: 100%;
-  z-index: 999;
+  z-index: z("common-loader");
 }
