Testing : Unit test cases for filter-bar spec

--- a/src/app/modules/shared/filter-bar/filter-bar.component.html
+++ b/src/app/modules/shared/filter-bar/filter-bar.component.html
@@ -30,7 +30,7 @@
           {{ item.name }}
         </button>
       </section>
-      <p>Successful Launch</p>
+      <p>Successful Land</p>
       <hr />
       <section>
         <button
