--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -7,6 +7,8 @@ $spThemeBg: #f2f2f2;
 $spBtnLight: #c5e09b;
 $spBtnActive: #7cba01;
 $spBtnHover: #7cba01;
+$spCardValue: #535da5;
+$spFilterLabel: #747474;
 
 $spOrange: #ee3d24;
 $spBlack: #231f20;
