updated program-card successfulLanding with N/A

--- a/src/app/modules/shared/program-card/program-card.component.html
+++ b/src/app/modules/shared/program-card/program-card.component.html
@@ -34,7 +34,7 @@
           <p><strong>Successful Landing :</strong></p>
         </td>
         <td>
-          <p>{{ successfulLanding }}</p>
+          <p>{{ successfulLanding ? successfulLanding : "N/A" }}</p>
         </td>
       </tr>
     </table>
