--- a/src/app/modules/shared/filter-bar/filter-bar.component.scss
+++ b/src/app/modules/shared/filter-bar/filter-bar.component.scss
@@ -3,7 +3,7 @@ aside {
   main {
     min-height: 50vh;
     background-color: $spWhite;
-    margin: 0 1em 0 0;
+    margin: 0 1em 1em 0;
     padding: 0.5em 0.5em 4em 0.5em;
     border-radius: 4px;
     section {
