--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,7 +1,10 @@
 .main-wrapper {
-  min-height: 85vh;
+  height: 100%;
   width: 100%;
   position: relative;
+  @media screen and (max-width: 700px) {
+    width: 40%;
+  }
 }
 
 .header-wrapper {
