--- a/src/app/modules/shared/filter-bar/filter-bar.component.scss
+++ b/src/app/modules/shared/filter-bar/filter-bar.component.scss
@@ -6,6 +6,9 @@ aside {
     margin: 0 1em 1em 0;
     padding: 0.5em 0.5em 4em 0.5em;
     border-radius: 4px;
+    @media screen and (max-width: 700px) {
+      margin: 0 0 1em 0;
+    }
     section {
       p {
         text-align: center;
