Lazy loading Images : added directive for lazy loading images

--- a/src/app/modules/shared/program-card/program-card.component.html
+++ b/src/app/modules/shared/program-card/program-card.component.html
@@ -1,12 +1,13 @@
 <article>
   <figure>
     <img
-      src="{{
+      imgLazyLoadDirective
+      [src]="
         rocketImageLink
           ? rocketImageLink
           : '../../../../assets/images/default-image.jpg'
-      }}"
-      alt=""
+      "
+      [alt]="missionName"
     />
     <figcaption>
       <p>
