Images lazy loading: final update handled the image rendering issue for SSR

--- a/src/app/modules/shared/program-card/program-card.component.html
+++ b/src/app/modules/shared/program-card/program-card.component.html
@@ -1,9 +1,14 @@
 <article>
   <figure>
     <img
-      imgLazyLoadDirective
-      [id]="rocketImageLink"
+      *ngIf="isPlatformServer"
       [src]="'../../../../assets/images/default-image.jpg'"
+      [alt]="missionName"
+    />
+    <img
+      *ngIf="!isPlatformServer"
+      imgLazyLoadDirective
+      [src]="rocketImageLink"
       [alt]="missionName"
     />
     <figcaption>
